add ocsf and common files.

--- a/Indication/src/overview.html
+++ b/Indication/src/overview.html
@@ -8,6 +8,7 @@ by specifying it in an ant task, like:
 />
 -->
 <html>
+    <head></head>
     <body>
         <a name="doc.Description"></a>
         An overview description of the design of the game Indication
