modify the ClientNetowork class and ClientController class.  modify all package.html files.  modify javadoc overview doc.

--- a/Indication/src/com/outtatech/common/package.html
+++ b/Indication/src/com/outtatech/common/package.html
@@ -6,7 +6,7 @@
     <body bgcolor="white">
         <a name="doc.Description"></a>
         This package provides classes that are based on all objects of the Indication Game.
-        The classes are common to the server and client.
+        The classes are common components in the game server classes and client player classes.
         <br>
 
     </body>
