fix all javadoc warnings and errors

--- a/Indication/src/com/outtatech/server/package.html
+++ b/Indication/src/com/outtatech/server/package.html
@@ -5,7 +5,7 @@
     </head>
     <body bgcolor="white">
         <a name="doc.Description"></a>
-        This package provides class for Indication's server.  The server classes handle client requests 
+        This package provides classes for Indication's server.  The server classes handle client requests 
         by providing state changes to games and providing state information to clients.
         <br>
 
